--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.schauderhaft</groupId>
     <artifactId>talk-reactive-relational-db</artifactId>
+	<packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>Slides and code for a talk about reactiv access to relational databases</name>
+    <name>Slides and code for a talk about reactive access to relational databases</name>
     <description>
       Das reaktive Programmiermodell verspricht bessere Skalierbarkeit als klassische (Servlet-basierte) Ansätze.
 Die ist in Zeiten, in denen man jeden CPU Zyklus einzeln bezahlt, äußerst relevant und erstrebenswert.
@@ -23,6 +24,10 @@ In diesem Vortrag werde ich vorstellen,
 
 Dabei werden sowohl die theoretischen Konzepte vorgestellt, als auch praktische Code Beispiele gezeigt.
     </description>
+
+	<modules>
+		<module>reactive-relational</module>
+	</modules>
 
     <properties>
         <project.slides.directory>${project.build.directory}/generated-slides</project.slides.directory>
