--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@ Dabei werden sowohl die theoretischen Konzepte vorgestellt, als auch praktische 
     </description>
 
 	<modules>
-		<module>reactive-relational</module>
+		<module>demo</module>
 	</modules>
 
     <properties>
