--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@ Dabei werden sowohl die theoretischen Konzepte vorgestellt, als auch praktische 
 	<modules>
 		<module>demo</module>
 		<module>servlet</module>
+		<module>r2dbc</module>
 	</modules>
 
     <properties>
