--- a/servlet/src/main/resources/application.properties
+++ b/servlet/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5740/postgres
+server.port = 9090
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.data-password=""
